--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme
-github:
-  is_project_page: false
+remote_theme: jekyll-theme-minimal 
+# pages-themes/cayman@v0.2.0
+# plugins:
+# - jekyll-remote-theme
+# github:
+#   is_project_page: false
