--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: jekyll-theme-minimal 
-# pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0 
+# jekyll-theme-minimal 
 # plugins:
 # - jekyll-remote-theme
 # github:
