--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,2 @@
-remote_theme: pages-themes/cayman@v0.2.0 
-# jekyll-theme-minimal 
-# plugins:
-# - jekyll-remote-theme
-# github:
-#   is_project_page: false
+remote_theme: jekyll-theme-minimal 
+
