--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
-theme: jekyll-theme-minimal 
-
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
+github:
+  is_project_page: false
