--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- remote-theme
+  - remote-theme
 github:
   is_project_page: false
+
+# Custom CSS
+sass:
+  style: compressed
