--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-  - remote-theme
-github:
-  is_project_page: false
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
-# Custom CSS
-sass:
-  style: compressed
+title: [The title of your site]
+description: [A short description of your site's purpose]
