--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ description: Lakshmikethan Bethamcharla, Darren Jiang, Sheng Zhou, Victor Thai
 
 github:
   is_project_page: True
-  repository_url: https://github.com/your-github-username/your-repository
+  repository_url: https://github.com/JiaDarren/DSC_180A
