--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ plugins:
 gem "github-pages", group: :jekyll_plugins
 
 title: Creating a more holistic Credit Score for Consumers
-description: Lakshmikethan Bethamcharla, Darren Jiang, Sheng Zhou, Victor Thai. Section: B18, Mentors: Brian Duke & Berk Ustun
+description: Section: B18 [Lakshmikethan Bethamcharla, Darren Jiang, Sheng Zhou, Victor Thai] Mentors: Brian Duke & Berk Ustun
 
 
 github:
-  is_project_page: True
+  is_project_page: False
   repository_url: https://github.com/JiaDarren/DSC_180A
